gap reimplemented to fix not linging guli guatchaa

--- a/static/styles.css
+++ b/static/styles.css
@@ -89,7 +89,7 @@ header h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0px;
+  gap: 10px;
   padding: 120px 20px 20px; /* top padding added */
 }
 
